--- a/index.html
+++ b/index.html
@@ -14,36 +14,57 @@
     <div class="filters-container">
       <button class="active" type="button" data-filter="*">All</button>
       <button type="button" data-filter="app-filter">App</button>
+      <button type="button" data-filter="card-filter">Card</button>
       <button type="button" data-filter="web-filter">Web</button>
     </div>
     <div class="portfolio">
-      <div class="img app-filter">
-        <img src="portfolio-1.jpg" alt="">
+
+      <div class="column">
+        <div class="img app-filter">
+          <img src="portfolio-1.jpg" alt="">
+        </div>
+
+        <div class="img web-filter">
+          <img src="portfolio-2.jpg" alt="">
+        </div>
+
+        <div class="img card-filter">
+          <img src="portfolio-3.jpg" alt="">
+        </div>
       </div>
 
-      <div class="img app-filter">
-        <img src="portfolio-2.jpg" alt="">
+      <div class="column">
+        <div class="img app-filter">
+          <img src="portfolio-4.jpg" alt="">
+        </div>
+
+        <div class="img web-filter">
+          <img src="portfolio-5.jpg" alt="">
+        </div>
+
+        <div class="img card-filter">
+          <img src="portfolio-6.jpg" alt="">
+        </div>
       </div>
 
-      <div class="img web-filter">
-        <img src="portfolio-3.jpg" alt="">
+      <div class="column">
+        <div class="img app-filter">
+          <img src="portfolio-7.jpg" alt="">
+        </div>
+
+        <div class="img web-filter">
+          <img src="portfolio-8.jpg" alt="">
+        </div>
+
+        <div class="img card-filter">
+          <img src="portfolio-9.jpg" alt="">
+        </div>
       </div>
 
-      <div class="img app-filter">
-        <img src="portfolio-4.jpg" alt="">
-      </div>
 
-      <div class="img web-filter">
-        <img src="portfolio-5.jpg" alt="">
-      </div>
 
-      <div class="img web-filter">
-        <img src="portfolio-6.jpg" alt="">
-      </div>
 
-      <div class="img app-filter">
-        <img src="portfolio-7.jpg" alt="">
-      </div>
+
     </div>
   </div>
   <script src="script.js"></script>
